<resources>
    <string name="app_name">MartinsAutoClinic</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="dashboard">Dashboard</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="email_address">Email Address</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="date">Date</string>
    <string name="book">Book</string>
    <string name="phone_hint">0123456789</string>
    <string name="email_hint">someone@domain.com</string>
    <string name="cancel">Cancel</string>
    <string name="complete_header">Complete</string>
    <string name="invoice_header">Invoice</string>
    <string name="service1">Standard</string>
    <string name="service2">Major Repair</string>
    <string name="service3">Software Update</string>
    <string name="service4">Minor Repair</string>
    <string name="service5">Paint Job</string>
    <string name="service6">Tire</string>
    <string name="logo">Logo</string>
    <string name="review">Review</string>
    <string name="services">SERVICES</string>
    <string name="activity_admin_dashbord">AdminDashboard</string>
    <string name="quotes">QUOTES</string>
    <string name="activity_edit_and_upload_catalogue">EditAndUploadCatalogue</string>
    <string name="activity_main">MainActivity</string>
    <string name="client_information">CLIENT \nINFORMATION</string>
    <string name="announcements">ANNOUNCEMENTS</string>
    <string name="activity_service">ServicesActivity</string>
    <string name="activity_request_quote">RequestQuote</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="back_button">Back Button</string>
</resources>