<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".BookAppointment">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/book_appointment"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">


        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/date"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/edttxtDate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_textbox"
            android:textColor="@color/background"
            android:drawableStart="@drawable/calendar_secondary"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="22dp"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="date"
            android:minHeight="48dp"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false" />

        <TextView
            android:id="@+id/txtCellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/cellphone_number"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/edtCellphone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_textbox"
            android:drawableStart="@drawable/phone_secondary"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="22dp"
            android:ems="12"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/email_address"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:background="@drawable/edit_textbox"
            android:drawableStart="@drawable/email_secondary"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:ems="12"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/txtService"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="Service"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/chkStandardService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/service1"
                android:textSize="19sp"
                android:minHeight="48dp" />

            <CheckBox
                android:id="@+id/chkMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/service2"
                android:textSize="19sp"
                android:minHeight="48dp" />

            <CheckBox
                android:id="@+id/chkSoftwareUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/service3"
                android:textSize="19sp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/chkMinor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/service4"
                android:textSize="19sp"
                android:minHeight="48dp" />

            <CheckBox
                android:id="@+id/chkPaintJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/service5"
                android:textSize="19sp"
                android:minHeight="48dp" />

            <CheckBox
                android:id="@+id/chkTire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/service6"
                android:textSize="19sp"
                android:minHeight="48dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBook"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:onClick="Book"
            android:text="@string/book"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_cancel"
            android:textColor="@color/primary"
            android:onClick="CancelBooking"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="25sp" />


    </LinearLayout>

</LinearLayout>