<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AdminDashboard">


    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="38sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:textAlignment="center"
        android:src="@drawable/logo" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:columnCount="2"
        app:rowCount="3" >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="Appointments"
            app:cardCornerRadius="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="Appointments"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/appointments"
                    android:onClick="Appointments"
                    android:src="@drawable/appoint" />

                <TextView
                    android:id="@+id/txtAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:onClick="Appointments"
                    android:text="@string/appointments"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="Quotes"
            app:cardCornerRadius="8dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="Quotes"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/quotes"
                    android:onClick="Quotes"
                    android:src="@drawable/quote" />

                <TextView
                    android:id="@+id/txtQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:onClick="Quotes"
                    android:text="@string/quotes"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="Services"
            app:cardCornerRadius="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="Services"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/services"
                    android:onClick="Services"
                    android:src="@drawable/car" />

                <TextView
                    android:id="@+id/txtService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:onClick="Services"
                    android:text="@string/services"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="ClientsInfo"
            app:cardCornerRadius="8dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="ClientsInfo"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgClientsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/client_information"
                    android:onClick="ClientsInfo"
                    android:src="@drawable/teamwork" />

                <TextView
                    android:id="@+id/txtClientsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ClientsInfo"
                    android:text="@string/client_information"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="Announcements"
            app:cardCornerRadius="8dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="Announcements"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAnnouncements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/announcements"
                    android:onClick="Announcements"
                    android:src="@drawable/announcement" />

                <TextView
                    android:id="@+id/txtAnnouncements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Announcements"
                    android:text="@string/announcements"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:onClick="ComingSoon"
            app:cardCornerRadius="8dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:onClick="ComingSoon"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgComingSoon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/coming_soon"
                    android:onClick="ComingSoon"
                    android:src="@drawable/soon" />

                <TextView
                    android:id="@+id/txtComingSoon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="ComingSoon"
                    android:text="@string/coming_soon"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>