<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AdminDashboard">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="38sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:textAlignment="center"
        android:src="@drawable/logo" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:columnCount="2"
        app:rowCount="3" >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/appointments"
                    android:onClick="Change"
                    android:src="@drawable/appoint" />

                <TextView
                    android:id="@+id/txtAppointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:onClick="Change"
                    android:text="@string/appointments"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/quote" />

                <TextView
                    android:id="@+id/txtQuote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="QOUTE"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car" />

                <TextView
                    android:id="@+id/txtService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="SERVICE"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgComingSoon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/teamwork" />

                <TextView
                    android:id="@+id/txtComingSoon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CLIENT \nINFORMATION"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgComingSoon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/announcement" />

                <TextView
                    android:id="@+id/txtComingSoon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ANNOUNCEMENT"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/imgComingSoon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/soon" />

                <TextView
                    android:id="@+id/txtComingSoon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="COMING SOON"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>